# ExcelParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ExcelParser.cpp  ExcelParser.hpp
input/: TestBook.xlsx
test/: test.cpp
